<resources>
  <string name="app_name">Tasker</string>
  <string name="task_list_title">Your tasks</string>
  <string name="title_edit_task">Edit task</string>
  <string name="title">Title</string>
  <string name="buy_milk_hint">Buy milk...</string>
  <string name="state">State</string>
  <string name="description">Description</string>
  <string name="state_new">New</string>
  <string name="state_working">Working</string>
  <string name="state_finished">Finished</string>
  <string name="title_add_task">Add task</string>
  <string name="delete">Delete</string>
</resources>
